# wf-config

./: LICENSE  meson.build  meson_options.txt
.github/workflows/: ci.yaml
example/: example.cpp  test.ini
include/: meson.build
include/wayfire/: animation.hpp  config.hpp
include/wayfire/config/: compound-option.hpp  config-manager.hpp  file.hpp  option-types.hpp  option-wrapper.hpp  option.hpp  optional.hpp  section.hpp  types.hpp  xml.hpp
include/wayfire/nonstd/: optional.hpp  safe-list.hpp
include/wayfire/util/: duration.hpp  log.hpp
include/wayfire/wayfire/config/: config-manager.hpp  file.hpp  option-types.hpp  option.hpp  optional.hpp  section.hpp  types.hpp  xml.hpp
include/wayfire/wayfire/util/: duration.hpp  log.hpp  stringify.hpp
src/: animation.cpp  animation.hpp  compound-option.cpp  config-manager.cpp  config.cpp  config.hpp  duration.cpp  file.cpp  log.cpp  option-impl.hpp  option.cpp  parse.cpp  parse.hpp  section-impl.hpp  section.cpp  types.cpp  xml.cpp
test/: config_lock.ini  config_manager_test.cpp  dummy.ini  duration_test.cpp  expect_line.hpp  file_test.cpp  log_test.cpp  meson.build  number_locale_test.cpp  option_base_test.cpp  option_test.cpp  option_wrapper_test.cpp  optional_test.cpp  section_test.cpp  types_test.cpp  xml_test.cpp
test/int_test/: config.ini  sys.ini
test/int_test/xml/: section1.xml  section2.xml  sectionobj.xml
