headers_config = [
'wayfire/wayfire/config/xml.hpp',
'wayfire/wayfire/config/config-manager.hpp',
'wayfire/wayfire/config/section.hpp',
'wayfire/wayfire/config/option-types.hpp',
'wayfire/wayfire/config/types.hpp',
'wayfire/wayfire/config/file.hpp',
'wayfire/wayfire/config/option.hpp'
]

headers_util = [
'wayfire/wayfire/util/log.hpp',
'wayfire/wayfire/util/stringify.hpp'
]

install_headers(headers_config, subdir: 'wayfire/wayfire/config')
install_headers(headers_util, subdir: 'wayfire/wayfire/util')
