headers_config = [
'wayfire/config/xml.hpp',
'wayfire/config/config-manager.hpp',
'wayfire/config/section.hpp',
'wayfire/config/option-types.hpp',
'wayfire/config/types.hpp',
'wayfire/config/file.hpp',
'wayfire/config/option.hpp',
'wayfire/config/option-wrapper.hpp',
'wayfire/config/compound-option.hpp',
]

headers_util = [
'wayfire/util/log.hpp',
'wayfire/util/stringify.hpp',
'wayfire/util/duration.hpp'
]

headers_nonstd = [
'wayfire/nonstd/safe-list.hpp'
]

install_headers(headers_config, subdir: 'wayfire/config')
install_headers(headers_util, subdir: 'wayfire/util')
install_headers(headers_nonstd, subdir: 'wayfire/nonstd')
