types_test = executable(
    'types_test',
    'types_test.cpp',
    include_directories: wfconfig_inc,
    link_with: lib_wfconfig,
    install: false)
test('Types test', types_test)

option_base_test = executable(
    'option_base_test',
    'option_base_test.cpp',
    include_directories: wfconfig_inc,
    link_with: lib_wfconfig,
    install: false)
test('OptionBase test', option_base_test)

option_test = executable(
    'option_test',
    'option_test.cpp',
    include_directories: wfconfig_inc,
    link_with: lib_wfconfig,
    install: false)
test('Option test', option_test)

section_test = executable(
    'section_test',
    'section_test.cpp',
    include_directories: wfconfig_inc,
    link_with: lib_wfconfig,
    install: false)
test('Section test', section_test)

# Utils
log_test = executable(
    'log_test',
    'log_test.cpp',
    include_directories: wfconfig_inc,
    link_with: lib_wfconfig,
    install: false)
test('Log test', log_test)
